added Forgot Password code

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,6 +13,10 @@ Home
         <mat-icon>person_add</mat-icon>
         <span>Sign up</span>
     </button>
+    <button mat-raised-button color="primary" routerLink="/forgot-password">
+        <mat-icon>help_outline</mat-icon>
+        <span>Forgot password</span>
+    </button>
 </section>
 
 <br>
